--- a/WpfPilots/MainWindow.xaml
+++ b/WpfPilots/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfPilots"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="526" Width="787">
     <Window.Resources>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="FontSize" Value="12" />
-            <Setter Property="Margin" Value="10" />
+            <Setter Property="Margin" Value="12" />
         </Style>
         <Style TargetType="Button" x:Key="VerticalButton">
             <Setter Property="Foreground" Value="Green" />
@@ -34,19 +34,23 @@
     </Window.Resources>
     <Grid>
         <Label Content="Welcome to game of Pilot's brothers" HorizontalAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" FontSize="22" Height="50"/>
-        <Canvas HorizontalAlignment="Center" Margin="0,67,0,339" Width="368" Height="30">
+        <Canvas HorizontalAlignment="Center" Margin="0,55,0,0" Width="368" Height="30" VerticalAlignment="Top">
             <ComboBox x:Name="cmbBox"  Width="120" HorizontalAlignment="Left" Margin="153,0,0,0">
                 <ComboBoxItem Content="2"/>
                 <ComboBoxItem Content="3"/>
                 <ComboBoxItem Content="4"/>
+                <ComboBoxItem Content="5"/>
+                <ComboBoxItem Content="6"/>
+                <ComboBoxItem Content="7"/>
                 <ComboBoxItem Content="8"/>
+                <ComboBoxItem Content="9"/>
+                <ComboBoxItem Content="10"/>
             </ComboBox>
             <Button Content="Создать" Click="СreateButton_Click" Margin="278,0,0,0"/>
 
             <Label Content="Задайте размер матрицы:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="153"/>
         </Canvas>
 
-        <UniformGrid x:Name="uniformdGrid" HorizontalAlignment="Center" Margin="0,124,0,0">
-        </UniformGrid>
+        <UniformGrid x:Name="uniformdGrid" HorizontalAlignment="Center" Margin="0,0,0,10" Height="403" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
